--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "short_name": "Color picker app",
+    "short_name": "Colorpicker",
     "name": "Color picker app",
     "icons": [
         {
