--- a/package.json
+++ b/package.json
@@ -46,5 +46,5 @@
             "last 1 safari version"
         ]
     },
-    "homepage": "https://github.com/ivaylotsachev/color-app"
+    "homepage": "http://ivaylotsachev.github.io/color-app"
 }
