--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "react-router-dom": "^5.0.1",
         "react-scripts": "3.1.1",
         "react-sortable-hoc": "^1.10.1",
-        "react-transition-group": "^4.2.2"
+        "react-transition-group": "^4.2.2",
+        "uniqid": "^5.0.3"
     },
     "scripts": {
         "start": "react-scripts start",
